# customresponses

./: Dockerfile  README.md  create-examples.sh  docker-compose.yaml  pyproject.toml  reset.sh
.github/workflows/: master.yml
customresponses/: crud.py  database.py  dependencies.py  main.py  schemas.py  settings.py
customresponses/routers/: api_v1.py  views.py
files/static/: create.js  delete.js  main.css  modify.js
files/templates/: base-form.html  base.html  create.html  index.html  list.html  modify.html
