[tool.poetry]
name = "customresponses"
version = "0.1.1"
description = ""
authors = ["Manuel Sanchez Pinar <aomanu@gmail.com>"]
readme = "README.md"
packages = [{include = "customresponses"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.86,<2"
pydantic = ">1,<2"
uvicorn = ">=0.19,<2"
jinja2 = ">3,<4"
redis = ">=4,<5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
